kubernetes/apps/homeassistant/base/middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: homeassistant-https-redirect
  namespace: automation
spec:
  redirectScheme:
    scheme: https
    permanent: true
