kubernetes/apps/homeassistant/base/ingress.yaml
# HTTP ingress with redirect to HTTPS
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: homeassistant-ingress-http
  namespace: automation
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/router.entrypoints: web
    traefik.ingress.kubernetes.io/router.middlewares: homeassistant-https-redirect@kubernetescrd
spec:
  rules:
    - host: homeassistant.sargeant.co
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: homeassistant
                port:
                  number: 8123
---
# HTTPS ingress
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: homeassistant-ingress-https
  namespace: automation
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/service.serversscheme: http
    traefik.ingress.kubernetes.io/router.tls: "true"
    cert-manager.io/cluster-issuer: letsencrypt-dns
spec:
  tls:
    - hosts:
        - homeassistant.sargeant.co
      secretName: homeassistant-tls
  rules:
    - host: homeassistant.sargeant.co
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: homeassistant
                port:
                  number: 8123
